Configure CORS in Spring instead of Traefik
Remove Traefik CORS middleware labels from docker-compose and centralize CORS handling in the Spring application. SecurityConfiguration.corsConfigurationSource now reads a comma-separated allowedOrigins value (falls back to wildcard), sets allowed origin patterns, restricts allowed headers to a specific list, exposes Authorization and Content-Disposition headers, enables credentials, and sets maxAge to 3600s. This consolidates CORS logic in-app and provides finer control over headers and origins.